tests/loops/invalid/continue_not_in_loop.amu
main :: () -> s32 {
    continue;
}